--- a/index.html
+++ b/index.html
@@ -1447,154 +1447,6 @@ function renderUsersList(){
   });
   resolvePills(wrap);
 }
-
-function winnersForKey(k){
-  const [gacha, rarity, code] = k.split('::');
-  const winners = [];
-  let total = 0;
-
-  const hasCounts = gHitCounts && Object.keys(gHitCounts).length > 0;
-
-  // 1) 可能なら gHitCounts を優先
-  if (hasCounts) {
-    for (const [user, gobj] of Object.entries(gHitCounts)) {
-      const n = ((((gobj || {})[gacha] || {})[rarity] || {})[code] || 0) | 0;
-      if (n > 0) { winners.push({ user, count: n }); total += n; }
-    }
-  }
-
-  // 2) フォールバック：gData に該当アイテムを“保有”していれば最低1として計上
-  for (const [user, uobj] of Object.entries(gData || {})) {
-    const have = ((((uobj || {})[gacha] || {}).items || {})[rarity] || []).includes(code);
-    if (!have) continue;
-
-    // 既に1)で入っているならスキップ
-    if (winners.some(w => w.user === user)) continue;
-
-    const n = ((((gHitCounts || {})[user] || {})[gacha] || {})[rarity] || {})[code] | 0;
-    const cnt = n > 0 ? n : 1; // ← counts 無しなら 1 扱い
-    winners.push({ user, count: cnt });
-    total += cnt;
-  }
-
-  return { winners, total };
-}
-
-let selectedRiaguGacha = null;
-
-function renderRiaguPanel(){
-  const box = document.getElementById('riaguSummary');
-  const tabs = document.getElementById('riaguTabs');
-  if(!box || !tabs) return;
-
-  const keys = Array.from(skipSet || []);
-  tabs.innerHTML = '';
-  box.innerHTML  = '';
-
-  if(keys.length === 0){
-    box.innerHTML = '<div class="muted">リアグは未設定です。</div>';
-    return;
-  }
-
-  // ガチャごとにグルーピング
-  const byGacha = new Map();
-  for (const k of keys){
-    const [gacha] = k.split('::');
-    if(!byGacha.has(gacha)) byGacha.set(gacha, []);
-    byGacha.get(gacha).push(k);
-  }
-  const gachas = Array.from(byGacha.keys()).sort((a,b)=>a.localeCompare(b,'ja'));
-
-  // 初期選択
-  if (!selectedRiaguGacha || !byGacha.has(selectedRiaguGacha)){
-    selectedRiaguGacha = gachas[0];
-  }
-
-  // タブ描画
-  gachas.forEach(g => {
-    const t = document.createElement('div');
-    t.className = 'tab' + (g === selectedRiaguGacha ? ' active' : '');
-    t.textContent = g;
-    t.dataset.gacha = g;
-    t.addEventListener('click', () => {
-      selectedRiaguGacha = g;
-      document.querySelectorAll('#riaguTabs .tab').forEach(x => x.classList.toggle('active', x === t));
-      renderRiaguPanel(); // 再描画（本文のみ更新）
-    });
-    tabs.appendChild(t);
-  });
-
-  // 本文（選択ガチャのみ表示）
-  const list = byGacha.get(selectedRiaguGacha) || [];
-  let groupTotal = 0;
-  const itemsHtml = [];
-
-  list.forEach(k => {
-    const [, rarity, code] = k.split('::');
-    const meta = riaguMeta[k] || {};
-    const { winners, total } = winnersForKey(k);  // ← バグ修正版を使用
-    const cost = +meta.cost || 0;
-    const type = meta.type ? `種別: ${escapeHtml(meta.type)}` : '種別: -';
-    const orderQty = total;
-    const sum = cost * orderQty;
-    groupTotal += sum;
-
-    const winHtml = winners.length
-      ? winners.map(w => `<span class="riagu-chip">${escapeHtml(w.user)} ×${w.count}</span>`).join('')
-      : `<span class="muted">獲得者なし</span>`;
-
-    itemsHtml.push(`
-      <div class="riagu-item" data-riagu-key="${encodeURIComponent(k)}">
-        <div class="riagu-head">
-          <div class="riagu-title">
-            <span class="rarity ${escapeHtml(rarity)}">【${escapeHtml(rarity)}】</span>
-            <span class="item-name">${escapeHtml(code)}</span>
-          </div>
-          <div class="riagu-meta"><span class="badge">${type}</span></div>
-        </div>
-        <div class="riagu-stats">
-          <span class="tag">原価: ¥${(cost||0).toLocaleString('ja-JP')}</span>
-          <span class="tag">発注数: ${orderQty}</span>
-          <span class="tag">合計: ¥${(sum||0).toLocaleString('ja-JP')}</span>
-        </div>
-        <div class="riagu-winners">${winHtml}</div>
-        <div class="riagu-actions">
-          <button class="btn small ghost" data-edit-riagu="${encodeURIComponent(k)}">編集</button>
-          <button class="btn small" data-unset-riagu="${encodeURIComponent(k)}">解除</button>
-        </div>
-      </div>
-    `);
-  });
-
-  const groupHtml = `
-    <div class="riagu-group">
-      ${itemsHtml.join('')}
-      <div class="riagu-total">このガチャ合計: ¥${groupTotal.toLocaleString('ja-JP')}</div>
-    </div>
-  `;
-
-  box.innerHTML = groupHtml;
-
-  // アクション: 編集/解除
-  box.querySelectorAll('[data-edit-riagu]').forEach(b=>{
-    b.addEventListener('click', ()=>{
-      const k = decodeURIComponent(b.getAttribute('data-edit-riagu')||'');
-      const [gacha, rarity, code] = k.split('::');
-      openRiaguModal({ gacha, rarity, code });
-    });
-  });
-  box.querySelectorAll('[data-unset-riagu]').forEach(b=>{
-    b.addEventListener('click', ()=>{
-      const k = decodeURIComponent(b.getAttribute('data-unset-riagu')||'');
-      delete riaguMeta[k];
-      saveLocalJSON(LS_KEY_RIAGU_META, riaguMeta);
-      skipDel(k);
-      renderItemGrid();
-      renderRiaguPanel();
-      saveAppStateDebounced();
-    });
-  });
-}
   
 // 目的: アップロードURLの保持/復元（ユーザー単位）
 const LS_KEY_UPLOAD_URLS = "last_upload_urls_v1";
@@ -1783,56 +1635,6 @@ $("#applyBtn").addEventListener("click", async ()=>{
     }else{ alert("ファイルまたはURLを指定してください。"); return; }
     closeImageModal(); renderItemGrid(); renderUsersList(); renderRiaguPanel(); saveAppStateDebounced();
   }catch(err){ console.error(err); alert("保存に失敗: "+(err?.message||err)); }
-});
-
-/* ====== リアルグッズ設定（リアグ） ====== */
-const riaguModal = document.getElementById('riaguModal');
-const riaguCost  = document.getElementById('riaguCost');
-const riaguType  = document.getElementById('riaguType');
-let currentRiaguTarget = null;
-
-function openRiaguModal(it){
-  currentRiaguTarget = it;
-  const k = keyOf(it.gacha, it.rarity, it.code);
-  document.getElementById('riaguTarget').textContent = `${it.gacha} / ${it.rarity}:${it.code}`;
-  const meta = riaguMeta[k] || {};
-  riaguCost.value = (meta.cost ?? '');
-  riaguType.value = (meta.type ?? '');
-  open(riaguModal);
-}
-function closeRiaguModal(){ close(riaguModal); currentRiaguTarget=null; }
-
-document.getElementById('riaguClose')?.addEventListener('click', closeRiaguModal);
-
-document.getElementById('riaguSave')?.addEventListener('click', async ()=>{
-  if(!currentRiaguTarget) return;
-  const k = keyOf(currentRiaguTarget.gacha, currentRiaguTarget.rarity, currentRiaguTarget.code);
-  const cost = Math.max(0, parseInt(String(riaguCost.value).replace(/[^\d]/g,''),10) || 0);
-  const type = (riaguType.value || '').trim();
-
-  riaguMeta[k] = { cost, type };
-  saveLocalJSON(LS_KEY_RIAGU_META, riaguMeta);
-
-  // リアグ化：画像解除→スキップ登録（= リアグ）
-  await clearImage(currentRiaguTarget);
-  skipAdd(k);
-
-  renderItemGrid();
-  renderRiaguPanel();
-  saveAppStateDebounced();
-  closeRiaguModal();
-});
-
-document.getElementById('riaguUnset')?.addEventListener('click', ()=>{
-  if(!currentRiaguTarget) return;
-  const k = keyOf(currentRiaguTarget.gacha, currentRiaguTarget.rarity, currentRiaguTarget.code);
-  delete riaguMeta[k];
-  saveLocalJSON(LS_KEY_RIAGU_META, riaguMeta);
-  skipDel(k);
-  renderItemGrid();
-  renderRiaguPanel();
-  saveAppStateDebounced();
-  closeRiaguModal();
 });
 
 /* ====== 解除／リアグ ====== */
@@ -2395,6 +2197,37 @@ document.addEventListener('keydown', (e) => {
   initRarityUI();
   // 段階移行用に window へも露出（後工程で byRarityThenCode などに置換利用）
   Object.assign(window, { getRarityMeta, listRaritiesForGacha, isMiss });
+</script>
+<script type="module" src="/src/ui-riagu.js"></script>
+<script type="module">
+  import { initRiaguUI } from '/src/ui-riagu.js';
+
+  // 任意：ログレベル（'debug'|'info'|'warn'|'error'）。無指定なら 'warn'
+  window.RIAGU_LOG_LEVEL = window.RIAGU_LOG_LEVEL ?? 'warn';
+
+  // index 側から依存を明示的に橋渡し（将来の変名にも強い）
+  initRiaguUI({
+    LS_KEY_RIAGU_META,
+    riaguMeta,
+    skipSet,
+    skipAdd,
+    skipDel,
+    saveLocalJSON,
+    loadLocalJSON,
+    renderItemGrid,
+    renderUsersList,
+    saveAppStateDebounced,
+    gData,
+    gHitCounts,
+    keyOf,
+    escapeHtml,
+    clearImage,
+    gCatalogByGacha,
+    gItemsByGacha,
+    // モーダル操作（index.html の open/close を明示注入）
+    openModal: open,
+    closeModal: close
+  });
 </script>
 <button id="gachaFab" type="button" class="btn gacha-fab">ガチャを引く</button>
 </body>
