--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
 <!-- 電話番号の自動リンク無効化 -->
 <meta name="format-detection" content="telephone=no">
-<title>ガチャ結果ビューア v21.3.2</title>
+<title>四遊楽ガチャツール v21.3.2</title>
 
 <!-- 先にライブラリ（ローカル） -->
 <script src="/lib/jszip.min.js"></script>
@@ -46,7 +46,7 @@
       </span>
     </button>
 
-    <h1>四遊楽ガチャツール  <span class="tag">v24.4.0</span></h1>
+    <h1>四遊楽ガチャツール</h1>
     <p class="muted">設定・ガチャ・アップロード・配布まで全て完結</p>
   </header>
 
